--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 body
 {
     
-    background-color: aliceblue;
+    background-color: #b1c9e0;
     
 }
 .container-fluid{
@@ -49,19 +49,20 @@ body
     padding-top:5%;
     padding-left:5%;
     padding-bottom: 5%;
+    font-size: 30px;
 }
 #about{
-  background-color: darkcyan;
+  background-color: #b1e0df;
 }
 #work
 {
-  background-color: aliceblue;
+  background-color: #b1c9e0;
   color: darkslategrey;
   margin-bottom: 3%;
 }
 #contact
 {
-  background-color: darkcyan;
+  background-color: #b1e0df;
     padding-bottom: 5%;
 }
 .head
@@ -74,6 +75,7 @@ body
     text-align: center;
     width: 100%;
     font-size: 100px;
+    background-size: 100% 100%;
 }
 
 
